--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -19,7 +19,9 @@ CC = gcc
 #GNUINC = /usr/lib/gcc-lib/i386-redhat-linux/2.7.2.3/include
 #GNUINC = /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.90.27/include
 #GNUINC = /usr/lib/gcc-lib/i486-linux/2.7.2.3/include
-GNUINC = /usr/lib/gcc-lib/i386-unknown-openbsd3.1/2.95.3/include
+#GNUINC = /usr/lib/gcc-lib/i386-unknown-openbsd3.1/2.95.3/include
+GNUINC = /usr/lib/gcc-lib/i486-slackware-linux/3.2.3/include
+
 #PROF = -pg
 #BUGFLAGS = -DDEBUG_FILE
 #WARN = -Wall -Wstrict-prototypes -Wmissing-prototypes
@@ -68,13 +70,13 @@ IDENTSRC = $(addprefix $(IDENTDIR)/, id_close.c id_open.c id_parse.c \
 IDENTHDR = $(addprefix $(IDENTDIR)/, ident.h)
 IDENTOBJ = $(IDENTSRC:.c=.o)
 LIBS =	$(IDENTDIR)/libident.a
-LIB =	-L$(IDENTDIR) -lident -lcompat # -lefence # -lcrypt
+LIB =	-L$(IDENTDIR) -lident -lcrypt # -lcompat # -lefence # -lcrypt
 AUX =	GNUmakefile .indent.pro HACKLOG version.proto .version.count \
 	world.wld
 
 ALLSRC = $(SRC) $(SPEC) $(SRC2) $(SRC3) $(IDENTSRC)
 
-all : bin/wileymud
+all : bin/wileymud bin/sign bin/mkworld
 
 .deps/%.d: %.c
 	set -e; $(CC) -M $(CFLAGS) $< \
